<resources>
    <string name="app_name">tutoring-service-app</string>
    <string name="title_activity_login">Sign In</string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="title_activity_main">Welcome!</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log In</string>
    <string name="action_log_out">Log Out</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_user_landing">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_learn">Learn</string>
    <string name="menu_educate">Educate</string>
    <string name="menu_help">Help</string>
    <string name="user_landing_question">What do you want to do today?</string>
    <string name="menu_motivate">Motivate</string>
    <string name="feed">Feed</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="title_activity_profile_page">My Profile</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_help_page">Help</string>
    <string name="title_activity_motivate">Motivate</string>
    <string name="my_communities">My Communities</string>
    <string name="create_new_community">Create New Community</string>
    <string name="placeholder">placeholder</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="last_name">Last Name</string>
    <string name="m_i">M.I.</string>
    <string name="first_name">First Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="birthday">Birthday</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="title_activity_learn_request">Learn</string>
    <string name="title_activity_video_call">Learning Session</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <string name="agora_app_id">c0814b633cfa429490f5d097ac0794a1</string>
</resources>
