<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_action_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_educate"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_educate" />
        <item
            android:id="@+id/nav_learn"
            android:icon="@drawable/ic_action_school"
            android:title="@string/menu_learn" />
        <item
            android:id="@+id/nav_motivate"
            android:icon="@drawable/ic_action_people"
            android:title="@string/menu_motivate" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_action_help_outline"
            android:title="@string/menu_help" />
    </group>
</menu>
